# json_eval_project

./: .clang-format  CMakeLists.txt  README.md
src/: app-exception.cpp  app-exception.h  common-parser.h  eval-lexer.cpp  eval-lexer.h  eval-parser.cpp  eval-parser.h  evaluate.cpp  evaluate.h  json-lexer.cpp  json-lexer.h  json-parser.cpp  json-parser.h  jsonclass.cpp  jsonclass.h  jsonobjects.cpp  jsonobjects.h  main.cpp  print.cpp  print.h  test-runner.cpp
tests/: input.eval  input.json
